--- a/apply.html
+++ b/apply.html
@@ -16,7 +16,7 @@
         <aside>
         <h1>THANK YOU FOR CHOOSING CTRLALTELITE.CO</h1>
         
-        <p id="alert-message">PLEASE FILL EACH AND EVERY PART OF THIS FORM TO ENSURE A SMMOTH SAIL TO YOUR POTENTIAL EMPLOYMENT OPPURTUNITY</p>
+        <p id="alert-message">PLEASE FILL EACH AND EVERY PART OF THIS FORM TO ENSURE A SMOOTH SAIL TO YOUR POTENTIAL EMPLOYMENT OPPURTUNITY</p>
         </aside>
         <hr>
 
