aside tag added

--- a/jobs.html
+++ b/jobs.html
@@ -26,8 +26,21 @@
     </nav>
   </div>
 </header>
+<!--
+<section class="job-banner">
+  <img src="images/businessman-8818855_1920.jpg" alt="" class="job-banner-img">
+  <h1 class="job-banner-title">Find Your Right Fit</h1>
+</section>
+-->
+
   <main>
-  <!-- box for whole job posting -->
+  
+  <aside class="right-aside">
+    <h3 id="aside-heading">Company</h3>
+    <p class="aside-note">Placeholder — add company perks, links, or instructions.</p>
+  </aside>
+  
+    <!-- box for whole job posting -->
     <article class="job-posting">
       
       <!-- header is visible first, then rest toggle -->
