--- a/jobs.html
+++ b/jobs.html
@@ -28,7 +28,7 @@
 </header>
 
 <section class="job-banner">
-  <img src="images/businessman-8818855_1920.jpg" alt="" class="job-banner-img">
+  <img src="images/businessman-8818855_1920.jpg" alt="banner_bg" class="job-banner-img">
   <h1 class="job-banner-title">Empowering Your Career Journey</h1>
   <p class="job-banner-subtitle">Explore roles that align with your skills, goals, and career path.</p>
 </section>
@@ -329,7 +329,6 @@ skills and encourages your ideas. We bring: </p>
       </div>
       </details>
     </article>   
-    </div> 
   </main>
 
     <footer class="job-footer">
@@ -337,3 +336,14 @@ skills and encourages your ideas. We bring: </p>
     </footer>    
 </body>
 </html>
+<!-- 
+REFERENCES & AI DISCLOSURE
+1. Layout Inspiration: Job meta styling and structure were inspired by the following webpage:
+   https://themewagon.github.io/jobfinderportal/job_listing.html
+2. AI-Generated Content: Detailed job descriptions, responsibilities, and skills were generated 
+using GenAI (ChatGPT).
+ChatGPT prompt used:
+   "I need detailed and realistic job descriptions for different IT roles 
+   including Software Developer, Cyber Security Analyst, Cloud Engineer, 
+   and Network Administrator."
+-->
