--- a/apply.html
+++ b/apply.html
@@ -157,8 +157,10 @@
                 <label>Job Reference Number</label>
                 <select id="ref" name="ref">
                     <option value="">Please Select The Job Reference Number</option>
-                    <option value="Software Developer">G01</option>
-                    <option value="Network Administrator">G02</option>
+                    <option value="Software Developer">#SWD93</option>
+                    <option value="Network Administrator">#NAD88</option>
+                    <option value="Cybersecurity">#CSA71</option>
+                    <option>#CEN54</option>
                 
                 </select>
                 <br>
