--- a/apply.html
+++ b/apply.html
@@ -147,7 +147,7 @@
             </fieldset>
 
             <!-- Submit and reset buttons -->
-            <input type="submit" value="Book"> <!-- Submit -->
+            <input type="submit" value="Submit"> <!-- Submit -->
             <input type="submit" value="reset form"> <!-- This is actually another submit, not a reset -->
         </form>
         
